# keiba-prediction-app

./: .codecov.yml  .env.example  .gitignore  GITHUB_SETUP.md  LICENSE  Makefile  QUICK_START_GITHUB.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  execution_plan.md  mkdocs.yml  requirements.md  setup-git.ps1  setup-git.sh
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: .gitkeep  20241108_0001_initial.py  20241108_0002_create_users_table.py  20241108_0003_create_auth_tokens_table.py  20241108_0004_create_race_domain_tables.py  20241108_0005_create_prediction_tables.py  20241109_0006_create_notification_tables.py  20241111_0007_create_audit_logs_table.py  __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  security.py
backend/app/crud/: __init__.py  audit_log.py  auth_token.py  notification.py  prediction.py  race.py  user.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  audit_log.py  auth_token.py  horse.py  jockey.py  notification.py  notification_setting.py  prediction.py  prediction_history.py  race.py  trainer.py  user.py  weather.py
backend/app/schemas/: __init__.py  admin.py  audit_log.py  auth.py  horse.py  jockey.py  notification.py  prediction.py  prediction_request.py  race.py  scraping.py  trainer.py  user.py  weather.py
backend/app/scraping/: __init__.py  base.py  client.py  exceptions.py  jra.py  local_keiba.py  netkeiba.py  policy.py  utils.py
backend/app/scripts/: fetch_races.py
backend/app/seed/: races.py
backend/scripts/: __init__.py  export_openapi.py  generate_er_diagram.py  generate_vapid_keys.py  init_db.py
backend/tests/: conftest.py  test_db_connection.py  test_health.py
(+206 files in other folders)
