[tool.poetry]
name = "keiba-backend"
version = "0.1.0"
description = "Keiba prediction backend service."
authors = ["Keiba Dev Team <dev@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
sqlalchemy = "^2.0.30"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

